Fix navbar structure

--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
             </div> -->
       </div>
       <div class="navBar">
-        <div class="navBarLinks">
-          <div class="homeLink">
-            <a href="#home">HOME</a>
-          </div>
-          <div class="aboutLink">
-            <a href="#about">ABOUT</a>
-          </div>
-          <div class="projectsLink">
-            <a href="#projects">PROJECTS</a>
-          </div>
-          <div class="resumeLink">
-            <a href="#resume">RESUME</a>
-          </div>
-          <div class="contactLink">
-            <a href="#contact">CONTACT</a>
-          </div>
+        <!-- <div class="navBarLinks"> -->
+        <div class="homeLink navBarLinks">
+          <a href="#home">HOME</a>
         </div>
+        <div class="aboutLink navBarLinks">
+          <a href="#about">ABOUT</a>
+        </div>
+        <div class="projectsLink navBarLinks">
+          <a href="#projects">PROJECTS</a>
+        </div>
+        <div class="resumeLink navBarLinks">
+          <a href="#resume">RESUME</a>
+        </div>
+        <div class="contactLink navBarLinks">
+          <a href="#contact">CONTACT</a>
+        </div>
+        <!-- </div> -->
         <div class="darkmodeButton">
           <div class="navBarDarkModeIcon">
             <button id="switch">
