--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
                 <li>JavaScript</li>
                 <li>ReactJS</li>
                 <li>Node.js</li>
-                <!-- <li>Mongoose</li> -->
+                <li>Mongoose</li>
                 <li>MongoDB</li>
                 <li>Git/GitHub</li>
                 <li>Python</li>
                 <li>Django</li>
                 <li>PostgreSQL</li>
+                <li>Netlify</li>
+                <li>Heroku</li>
                 <li>Google Firebase</li>
-                <!-- <li>Netlify</li> -->
-                <!-- <li>Heroku</li> -->
               </ul>
             </div>
           </div>
